--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,7 @@
 <img src="../image/1.jpg" style="width: 100vw;display: block"/>
 <img src="../image/3.png" class="ys"/>
 <input type="tel" placeholder="请输入福建移动号码" maxlength="11" class="tel"/>
+<p class="d-none" id="ooo">输入号码不正确,请重新输入</p>
 
 <div flex="main:justify cross:center" class="box">
 
@@ -35,7 +36,6 @@
     <label flex="cross:center main:center">50元</label>
 
     <!--100-->
-
     <label flex="cross:center main:center">100元</label>
 
     <!--自定义-->
@@ -45,8 +45,9 @@
     </label>
 
 
-
 </div>
+
+<div id="tishi" class="d-none" flex=" main:right">输入不正确,请重新输入</div>
 
 
 <div class="zffs">
@@ -61,7 +62,7 @@
         </div>
 
     <!--银联支付-->
-        <div class="wx" flex="cross:center main:justify">
+        <div class="wx on" flex="cross:center main:justify">
             <div flex="cross:center">
                 <img src="../image/yl.png" alt="" class="tubiao"/>银联支付
             </div>
@@ -97,27 +98,33 @@
 
 <!--活动规则-->
 <!--输入手机号-->
-
-<div class="shoujihao d-none" flex="dir:top cross:center">
+<div class="sjh d-none" flex="cross:center main:center">
+<div class="shoujihao" flex="dir:top cross:center">
     <input type="tel" placeholder="请输入您的手机号码" maxlength="11" class="tel2"/>
+    <p class="d-none" id="ppp">输入号码不正确,请重新输入</p>
+
     <p>获赠流量将通过该号码领取，受理结果将在完成扣款后，以短信形式通知。</p>
     <div class="sj" flex="main:justify">
         <div class="sj-left" flex="cross:center main:center">取消</div>
         <div class="sj-right" flex="cross:center main:center">确定</div>
     </div>
 </div>
+</div>
 <!--输入手机号-->
 
 <!--手机号不一致-->
-<div class="shoujihaobyz" flex="dir:top cross:center">
-    <p>您输入的手机号码与充值手机号码一致，无法获赠流量。继续充值吗？</p>
-    <div class="sjbyz" flex="main:justify">
-        <div class="sjbyz-left" flex="cross:center main:center">取消</div>
-        <div class="sjbyz-right" flex="cross:center main:center">确定</div>
+
+<div class="byz d-none" flex="cross:center main:center">
+    <div class="shoujihaobyz" flex="dir:top cross:center">
+        <p>您输入的手机号码与充值手机号码一致，无法获赠流量。继续充值吗？</p>
+        <div class="sjbyz" flex="main:justify">
+            <div class="sjbyz-left" flex="cross:center main:center">取消</div>
+            <div class="sjbyz-right" flex="cross:center main:center">确定</div>
+        </div>
     </div>
 </div>
-<!--手机号不一致-->
 
+<!--手机号不一致-->
 
 
 <script src="../js/index.js"></script>
